// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`playground compile output > global ambient props compile to expected runtime props 1`] = `
"import { defineComponent as _defineComponent } from 'vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'GlobalAmbientCase',
  props: {
    tone: { type: String, required: true },
    version: { type: Number, required: false },
    pinned: { type: Boolean, required: false }
  },
  setup(__props: any, { expose: __expose }) {
  __expose();

const props = __props;

const __returned__ = { props }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}

})"
`;

exports[`playground compile output > imported generic table props compile to expected runtime props 1`] = `
"import { defineComponent as _defineComponent } from 'vue'
type BucketData = {
  id: string;
  name: string;
  is_enabled: boolean;
  max_objects: number;
  max_size: number;
  owner: string;
  placement: string;
  used: string;
  objects: number;
  used_percent: number;
  used_bytes: number;
};

type TableFieldKey<T, S extends string | undefined> = S extends undefined
  ? keyof T
  : keyof (T & Record<Extract<S, string>, string>);

type TableColumnKey<T, S extends string | undefined> = TableFieldKey<T, S> | "operation";

type CoveredColumnAttribute = "formatter" | "type" | "align" | "headerAlign" | "filterPlacement";
type ElTableColumnCtor = typeof import("element-plus").ElTableColumn;

type TableColumn<T, S extends string | undefined = undefined> = Partial<
  Omit<InstanceType<ElTableColumnCtor>, CoveredColumnAttribute> & {
    header: TableFieldKey<T, S>;
    slotName: TableColumnKey<T, S>;
    prop: TableColumnKey<T, S>;
    formatter: (row: T, column: TableColumn<T, S>, cellValue: any, index: number) => any;
    type: "selection" | "index" | "expand";
    fixed: "left" | "right";
    align: "left" | "center" | "right";
    headerAlign: "left" | "center" | "right";
    filterPlacement:
      | "top"
      | "top-start"
      | "top-end"
      | "bottom"
      | "bottom-start"
      | "bottom-end"
      | "left"
      | "left-start"
      | "left-end"
      | "right"
      | "right-start"
      | "right-end";
  }
>[];

type TableProps<T, S extends string | undefined = undefined> = {
  dataList: T[];
  tableList?: TableColumn<T, S>;
  loading?: boolean;
};


export default /*@__PURE__*/_defineComponent({
  __name: 'ImportedGenericTableCase',
  props: {
    dataList: { type: Array, required: true },
    tableList: { type: Array, required: false },
    loading: { type: Boolean, required: false }
  },
  setup(__props: any, { expose: __expose }) {
  __expose();



const __returned__ = {  }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}

})"
`;

exports[`playground compile output > local complex props compile to expected runtime props 1`] = `
"import { defineComponent as _defineComponent } from 'vue'
import type { LocalCardShape } from "../types/local";


export default /*@__PURE__*/_defineComponent({
  __name: 'LocalComplexCase',
  props: {
    title: { type: String, required: true },
    pinned: { type: Boolean, required: true },
    count: { type: Number, required: false },
    mode: { type: String, required: true }
  },
  setup(__props: any, { expose: __expose }) {
  __expose();

const modes = ["compact", "detail"] as const;

const props = __props;

const __returned__ = { modes, props }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}

})"
`;

exports[`playground compile output > third-party utility props compile to expected runtime props 1`] = `
"import { defineComponent as _defineComponent } from 'vue'
import type { SetOptional, Simplify } from "type-fest";

import type { ThirdPartyShape } from "../types/local";


export default /*@__PURE__*/_defineComponent({
  __name: 'ThirdPartyCase',
  props: {
    label: { type: String, required: true },
    size: { type: Number, required: false },
    active: { type: Boolean, required: true }
  },
  setup(__props: any, { expose: __expose }) {
  __expose();

const props =
  __props;

const __returned__ = { props }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}

})"
`;
